# learn_crewai

./: .gitignore
crews/deep_research_01/: README.md  pyproject.toml
crews/deep_research_01/src/deep_research_01/: crew.py  main.py
crews/deep_research_01/src/deep_research_01/config/: agents.yaml  tasks.yaml
crews/deep_research_coord/: README.md  final_report.md  pyproject.toml
crews/deep_research_coord/src/deep_research_coord/: crew.py  main.py  patch.py  utils.py
crews/deep_research_coord/src/deep_research_coord/config/: agents.yaml  tasks.yaml
crews/deep_research_coord/src/deep_research_coord/guardrails/: guardrails.py
crews/deep_research_coord/src/deep_research_coord/tools/: chart_generator_tool.py
crews/deep_reserch_advanced/: README.md  log_crew.txt  pyproject.toml  research_report.md
crews/deep_reserch_advanced/src/deep_reserch_advanced/: crew.py  main.py
crews/deep_reserch_advanced/src/deep_reserch_advanced/config/: agents.yaml  tasks.yaml
crews/job-posting/: pyproject.toml
