[project]
name = "deep_research_01"
version = "0.1.0"
description = "deep_research_01 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.2"
]

[project.scripts]
deep_research_01 = "deep_research_01.main:run"
run_crew = "deep_research_01.main:run"
train = "deep_research_01.main:train"
replay = "deep_research_01.main:replay"
test = "deep_research_01.main:test"
run_with_trigger = "deep_research_01.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
