[project]
name = "deep_research_coord"
version = "0.1.0"
description = "deep_research_coord using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.2",
    "exa-py>=2.2.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]

[project.scripts]
deep_research_coord = "deep_research_coord.main:run"
run_crew = "deep_research_coord.main:run"
train = "deep_research_coord.main:train"
replay = "deep_research_coord.main:replay"
test = "deep_research_coord.main:test"
run_with_trigger = "deep_research_coord.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
