[project]
name = "deep_reserch_advanced"
version = "0.1.0"
description = "deep_reserch_advanced using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.2",
    "exa-py>=2.2.0",
]

[project.scripts]
deep_reserch_advanced = "deep_reserch_advanced.main:run"
run_crew = "deep_reserch_advanced.main:run"
train = "deep_reserch_advanced.main:train"
replay = "deep_reserch_advanced.main:replay"
test = "deep_reserch_advanced.main:test"
run_with_trigger = "deep_reserch_advanced.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
